samples/_failures_safe/1761159496_3519cb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9caf8e7d.c: In function ‘pointcloud_compute_stats’:
./samples/SAFE/__tmp_9caf8e7d.c:128:5: error: expected expression at end of input
  128 |     for (size_t i =
      |     ^~~
./samples/SAFE/__tmp_9caf8e7d.c:128:5: error: expected declaration or statement at end of input
